syntax = "proto3";

package api.review.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "service-review/api/review/v1;v1";
option java_multiple_files = true;
option java_package = "api.review.v1";

service Review {
	rpc CreateReview (CreateReviewRequest) returns (CreateReviewReply) {
		option (google.api.http) = {
			post: "/v1/review"
			body: "*"
		};
	};
	rpc UpdateReview (UpdateReviewRequest) returns (UpdateReviewReply);
	rpc DeleteReview (DeleteReviewRequest) returns (DeleteReviewReply);
	rpc GetReview (GetReviewRequest) returns (GetReviewReply);
	rpc ListReview (ListReviewRequest) returns (ListReviewReply);
}

message CreateReviewRequest {
	int64 userId = 1 [(validate.rules).int64 = {gt: 0}];
	int64 orderId = 2 [(validate.rules).int64 = {gt: 0}];
	int32 score = 3 [(validate.rules).int32 = {in: [1,2,3,4,5]}];
	int32 serviceScore = 4 [(validate.rules).int32 = {in: [1,2,3,4,5]}];
	int32 expreeScore = 5 [(validate.rules).int32 = {in: [1,2,3,4,5]}];
	string  content = 6 [(validate.rules).string = {min_len: 8, max_len: 255}];
	string picinfo = 7;
	string videoInfo = 8;
	bool annoymous = 9;
}
message CreateReviewReply {
	int64 reviewId = 1;
}

message UpdateReviewRequest {}
message UpdateReviewReply {}

message DeleteReviewRequest {}
message DeleteReviewReply {}

message GetReviewRequest {}
message GetReviewReply {}

message ListReviewRequest {}
message ListReviewReply {}